--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,36 @@ body {
     margin-bottom: 10px;
     margin-top: 10px;
   }
+
+  
+  @media (max-width: 770px) and (min-width:600px) {
+    .photos-place img{
+        width:110px;
+        height: 70px;
+        /* padding-left: 10px;
+        padding-right: 10px; */
+        margin-bottom: 10px;
+        margin-top: 10px;
+      }
+   }
+   @media (max-width: 599px) and (min-width:500px) {
+    .photos-place img{
+        width:100px;
+        height: 55px;
+        /* padding-left: 10px;
+        padding-right: 10px; */
+        margin-bottom: 10px;
+        margin-top: 10px;
+      }
+   }
+
+   @media (max-width: 499px)  {
+    .photos-place img{
+        width:90px;
+        height: 40px;
+        /* padding-left: 10px;
+        padding-right: 10px; */
+        margin-bottom: 10px;
+        margin-top: 10px;
+      }
+   }
